--- a/WebAPI/BookingYacht/BookingYacht/BookingYacht.csproj
+++ b/WebAPI/BookingYacht/BookingYacht/BookingYacht.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
