--- a/WebAPI/BookingYacht/BookingYacht/BookingYacht.csproj
+++ b/WebAPI/BookingYacht/BookingYacht/BookingYacht.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\ISS Deploy.pubxml" />
     <_WebToolingArtifacts Remove="Properties\PublishProfiles\ISS_Deploy.pubxml" />
   </ItemGroup>
 
