Login gg firebase

--- a/WebApp/booking-yacht/angular.json
+++ b/WebApp/booking-yacht/angular.json
@@ -11,6 +11,19 @@
           "builder": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "firebase",
+              "@angular/common/locales/fr",
+              "lodash/dropRight",
+              "@firebase/app",
+              "firebase/app",
+              "@firebase/database",
+              "@firebase/firestore",
+              "@firebase/functions",
+              "@firebase/performance",
+              "@firebase/remote-config"
+            ],
             "outputPath": "dist/apps/booking-yacht",
             "index": "apps/booking-yacht/src/index.html",
             "main": "apps/booking-yacht/src/main.ts",
@@ -97,6 +110,10 @@
             "jestConfig": "apps/booking-yacht/jest.config.js",
             "passWithNoTests": true
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     },
