--- a/WebApp/booking-yacht/apps/booking-yacht/tsconfig.json
+++ b/WebApp/booking-yacht/apps/booking-yacht/tsconfig.json
@@ -20,6 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "allowJs": true,
     "emitDecoratorMetadata": true,
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
