--- a/WebApp/booking-yacht/package.json
+++ b/WebApp/booking-yacht/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^12.1.0",
     "@angular/compiler": "^12.1.0",
     "@angular/core": "^12.1.0",
+    "@angular/fire": "^7.0.4",
     "@angular/forms": "^12.1.0",
     "@angular/material": "^12.2.4",
     "@angular/platform-browser": "^12.1.0",
@@ -23,12 +24,17 @@
     "@angular/router": "^12.1.0",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@nrwl/angular": "12.8.0",
+    "angularx-social-login": "^4.0.1",
     "bootstrap": "4.5.2",
+    "firebase": "^9.1.0",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
     "quill": "^1.3.7",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -60,6 +66,13 @@
     "jest-preset-angular": "9.0.4",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@angular-devkit/architect": "^0.1200.0",
+    "firebase-tools": "^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   }
 }
