--- a/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\ISSDeploy.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Properties\PublishProfiles\ISSDeploy.pubxml.user" />
   </ItemGroup>
 
