--- a/WebApp/booking-yacht/apps/booking-yacht/tsconfig.json
+++ b/WebApp/booking-yacht/apps/booking-yacht/tsconfig.json
@@ -26,6 +26,8 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
+    "strictNullChecks": false,
+
 
   }
 }
