--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.1.0
+  
+  # provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
