--- a/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
