--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:44390",
+    "Secret": "Top1PasswordInTheWorld"
+  }
 }
