Add Google Login

--- a/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Interfaces\Business\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
