--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -14,5 +14,8 @@
     "ValidAudience": "User",
     "ValidIssuer": "https://localhost:44390",
     "Secret": "Top1PasswordInTheWorld"
+  },
+  "Firebase": {
+    "Admin": "AppData/Firebase/firebase-admin.json"
   }
 }
