--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookingYacht": "Server=booking-yacht-dev.database.windows.net;Database=BookingYacht;User Id=swd391gr5;Password=Password@3915"
+    "BookingYacht": "Server=booking-yacht-dev.database.windows.net;Database=BookingYacht;TrustServerCertificate=true;User Id=swd391gr5;Password=Password@3915"
   },
   "Logging": {
     "LogLevel": {
