--- a/WebApp/booking-yacht/angular.json
+++ b/WebApp/booking-yacht/angular.json
@@ -38,10 +38,12 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css",
               "node_modules/primeflex/primeflex.css",
               "apps/booking-yacht/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/quill/dist/quill.js"]
           },
           "configurations": {
             "production": {
