--- a/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Implement\Agency" />
     <Folder Include="Implement\Agency\" />
     <Folder Include="Implement\Business\" />
     <Folder Include="Interfaces\Agency\" />
