--- a/WebApp/booking-yacht/package.json
+++ b/WebApp/booking-yacht/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
@@ -40,6 +41,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "~12.1.0",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
@@ -55,6 +57,7 @@
     "@nrwl/tao": "12.8.0",
     "@nrwl/workspace": "12.8.0",
     "@types/jest": "26.0.24",
+    "@types/lodash": "^4.14.175",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
@@ -62,17 +65,16 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.4",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.3",
-    "typescript": "~4.3.5",
-    "@angular-devkit/architect": "^0.1200.0",
     "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "jest": "27.0.3",
+    "jest-preset-angular": "9.0.4",
+    "jsonc-parser": "^3.0.0",
     "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "prettier": "^2.3.1",
+    "ts-jest": "27.0.3",
+    "typescript": "~4.3.5"
   }
 }
