--- a/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.API/BookingYacht.API.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
