--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -42,6 +42,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   get: ^4.3.8
+  google_sign_in: ^5.1.1
+  firebase_auth: ^3.1.2
+  firebase_core: ^1.7.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
