--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -31,8 +31,13 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^9.1.0
   qr_code_scanner: ^0.5.2
-  
-  # provider: ^6.0.1
+  http: ^0.13.4
+  shared_preferences: ^2.0.8
+  get: ^4.3.8
+  google_sign_in: ^5.1.1
+  firebase_auth: ^3.1.2
+  firebase_core: ^1.7.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,10 +46,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  get: ^4.3.8
-  google_sign_in: ^5.1.1
-  firebase_auth: ^3.1.2
-  firebase_core: ^1.7.0
+
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
