--- a/Mobile/owners_yacht/android/app/src/main/AndroidManifest.xml
+++ b/Mobile/owners_yacht/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.owners_yacht">
+    package="com.example.owners_Yacht">
    <application
-        android:label="owners_yacht"
+        android:label="owners_Yacht"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
