--- a/Mobile/owners_yacht/android/app/build.gradle
+++ b/Mobile/owners_yacht/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.owners_Yacht"
+        applicationId "com.example.owners_yacht"
         minSdkVersion 20
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
