--- a/Mobile/owners_yacht/android/app/src/profile/AndroidManifest.xml
+++ b/Mobile/owners_yacht/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.owners_Yacht">
+    package="com.example.owners_yacht">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
