--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   google_sign_in: ^5.1.1
   firebase_auth: ^3.1.2
   firebase_core: ^1.7.0
-
+  settings_ui: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
