--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -17,5 +17,12 @@
   },
   "Firebase": {
     "Admin": "AppData/Firebase/firebase-admin.json"
+  },
+
+  "VnPay": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnPath": "/api/v1.0/agency/vn-pay/PaymentConfirm",
+    "TmnCode": "SLPFPO8O",
+    "HashSecret": "TMSPMWVVZNCZGGTYSKGMTYJJFLFFWGSX"
   }
 }
