--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -22,6 +22,7 @@
   "VnPay": {
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "ReturnPath": "/api/v1.0/agency/vn-pay/PaymentConfirm",
+    "ReturnAdminPath": "/api/v1.0/admin/vn-pay/PaymentConfirm",
     "TmnCode": "SLPFPO8O",
     "HashSecret": "TMSPMWVVZNCZGGTYSKGMTYJJFLFFWGSX"
   }
