--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.1.2
   firebase_core: ^1.7.0
   settings_ui: ^1.0.0
+  flutter_html: ^2.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
