--- a/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
+++ b/WebAPI/BookingYacht/BookingYacht.Business/BookingYacht.Business.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.11" />
   </ItemGroup>
 
 </Project>
