--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.7.0
   settings_ui: ^1.0.0
   flutter_html: ^2.1.5
+  flutter_slidable: ^0.6.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
