--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   settings_ui: ^1.0.0
   flutter_html: ^2.1.5
   flutter_slidable: ^0.6.0
+  table_calendar: ^3.0.3
+  fluttertoast: ^8.0.8
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
