--- a/WebApp/booking-yacht/package.json
+++ b/WebApp/booking-yacht/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
