--- a/Mobile/owners_yacht/pubspec.yaml
+++ b/Mobile/owners_yacht/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^10.0.9
   flutter_local_notifications: ^9.0.2
   image_picker: ^0.8.4+4
+  jwt_decode: ^0.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
