Change Payment Redirect

--- a/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
+++ b/WebAPI/BookingYacht/BookingYacht.API/appsettings.json
@@ -25,7 +25,7 @@
   "VnPay": {
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "ReturnPath": "/api/v1.0/agency/vn-pay/PaymentConfirm",
-    "ReturnAdminPath": "http://localhost:4200/#/payment/",
+    "ReturnAdminPath": "https://www.bookingyacht.site/#/payment/",
     "TmnCode": "SLPFPO8O",
     "HashSecret": "TMSPMWVVZNCZGGTYSKGMTYJJFLFFWGSX"
   }
